--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="lofi">
+<html lang="en" data-theme="black">
   <head>
     <meta charset="utf-8" />
-    <title>AngularSkele</title>
+    <title>Harshith Ashok</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
